--- a/Scenarios/1.md
+++ b/Scenarios/1.md
@@ -13,5 +13,18 @@
 7. Start **VS Code**, press **Ctrl+Alt+P** and select **Git Clone**, paste the clone url and select a folder in which you want to clone the directory.
 8. **Open the cloned repository** and **open the workspace** when VS Code asks you (or do it manually)
 9. In the **.AL-Go** folder, click the **localDevEnv.ps1** script and Run the PowerShell script.
-![Local Development Environment](/images/1d.png)
+![LocalDevEnv](/images/1d.png)
 10. Answer the questions asked about container name, authentication mechanism, credentials and select none for license file. The script might popup a dialog asking for permissions to run docker commands, select Yes in this dialog. Wait for completion of the script.
+![LocalDevEnv Done](/images/1e.png)
+11. In VS Code, press **Ctrl+Alt+P** and **clear the credentials cache**.
+12. Open the **HelloWorld.al** file, modify the string and press **F5**. Depending on authentication selected VS Code might ask for the credentials you provided earlier.
+13. Login to **Business Central** and your **very own world** opens up!
+![Very own world](/images/1f.png)
+14. Back in **VS Code**, you will see that beside your changes in HelloWorld.al, the launch.json was also modified with the information about the local environment. **Stage your changes**, **commit** and **push**
+![Launch.json](/images/1g.png)
+15. Back on github.com, investigate your **Workflows**.
+![Workflows](/images/1h.png)
+16. When the build is done, inspect the **Build summary** (no test app)
+![Build Summary](/images/1i.png)
+17.	Inspect the workflow run by clicking the **build job**, expanding the **Run Pipeline** section and the **Compiling apps** subsection
+![Inspect](/images/1j.png)
