--- a/Scenarios/10.md
+++ b/Scenarios/10.md
@@ -14,6 +14,6 @@ Copy following URL (a direct download of the main branch of the BingMaps sample)
 ![CI/CD](/images/10c.png)
 1. After the workflow completes, you can investigate the output and see that everything works
 ![Success](/images/10d.png)
-1. Use [scenario #3](3.md), [scenario #4](4.md) and [scenario #5](5.md) to set up customer environments, publish and test the app.
+1. Use [scenario 3](3.md), [scenario 4](4.md) and [scenario 5](5.md) to set up customer environments, publish and test the app.
 ---
 [back](/README.md)
