--- a/Scenarios/4.md
+++ b/Scenarios/4.md
@@ -1,13 +1,13 @@
 # #4 Create a release of your application
-*Pre-requisites: A completed [scenario 3](3.md)*
+*Prerequisites: A completed [scenario 3](3.md)*
 
-1. On github.com, open **Actions** in your project and select **Create Release**. Click **Run workflow**. Enter 1.0 as **name** and **tag** of the release, click **Run workflow**.
+1. On github.com, open **Actions** in your project and select **Create Release**. Choose **Run workflow**. Enter 1.0 as **name** and **tag** of the release, and then choose **Run workflow**.
 ![Run workflow](/images/4a.png)
-1. When the **create release** workflow completes, click the **Code** section to see the releases.
+1. When the **create release** workflow completes, choose the **Code** section to see the releases.
 ![Run workflow](/images/4b.png)
-1. Click the release (1.0) and you will see the release. The release notes are pulled from all commits checked in, click the Edit button (the pencil) to modify the release notes. At the bottom, you can see the artifacts published, both the apps and the source code. A tag is created in the repository for the release number to always keep this.
+1. Choose the release (1.0) and you will see the release. The release notes are pulled from all commits checked in, choose the **Edit** button (the pencil) to modify the release notes. At the bottom, you can see the artifacts published, both the apps and the source code. A tag is created in the repository for the release number to always keep this.
 ![Run workflow](/images/4c.png)
-1. Under **Actions**, select the **CI/CD** workflow and click **Run workflow** to kick off a new CI/CD workflow. After the CI/CD workflow finishes, you can inspect the workflow output to see that the latest release was used as a baseline for the upgrade tests in the pipeline. You will also see that the new build, just created was deployed to the QA environment automatically.
+1. Under **Actions**, select the **CI/CD** workflow and choose **Run workflow** to kick off a new CI/CD workflow. After the CI/CD workflow finishes, you can inspect the workflow output to see that the latest release was used as a baseline for the upgrade tests in the pipeline. You will also see that the new build, just created was deployed to the QA environment automatically.
 ![Run workflow](/images/4d.png)
 ---
 [back](/README.md)
