--- a/Scenarios/9.md
+++ b/Scenarios/9.md
@@ -1,7 +1,7 @@
 # #9 Create Online Development Environment from GitHub
-*Pre-requisites: A completed [scenario 7](7.md).*
-*To create an online development environment, we need to authenticate to our Business Central Admin API using OAuth. The Create Online Dev. Environment workflow works unattended if you provide a secret called **AdminCenterApiCredentials** (either as a GitHub Secret or in a keyvault)
-At the time when writing this, the Admin Center API does not yet support S2S, meaning that the AdminCenterApiCredentials cannot be formatted like explained in section 3, but needs to be formatted as:
+*Prerequisites: A completed [scenario 7](7.md).*
+*To create an online development environment, we need to authenticate to our Business Central Admin API using OAuth. The Create Online Dev. Environment workflow works unattended if you provide a secret called **AdminCenterApiCredentials** (either as a GitHub Secret or in a keyvault).
+At the time when writing this, the Admin Center API does not yet support S2S, meaning that the `AdminCenterApiCredentials` cannot be formatted like explained in section 3, but needs to be formatted as:
 
 `{"refreshtoken":"refreshtoken"}`
 
@@ -15,7 +15,7 @@ At the time when writing this, the Admin Center API does not yet support S2S, me
 
 ![Devicecode](/images/9b.png)
 
-1. On github.com, under **Actions** select the **Create Online Dev. Environment** workflow, click Run workflow and specify the requested **environment name** and whether you want to **reuse the environment** if it already exists and click **Run workflow**.
+1. On github.com, under **Actions** select the **Create Online Dev. Environment** workflow, choose **Run workflow** and specify the requested **environment name** and whether you want to **reuse the environment** if it already exists and choose **Run workflow**.
 ![Run Workflow](/images/9c.png)
 1. When the workflow is complete, inspect the pull request to see the changes in **launch.json**. This environment can now be used from a developer but **note** that two developers cannot share one online environment.
 ![launch.json](/images/9c.png)
