--- a/Scenarios/13.md
+++ b/Scenarios/13.md
@@ -1,4 +1,4 @@
-# #13 Setup your own GitHub runner to increase workflow performance
+# #13 Setup your own GitHub runner to increase build performance
 *Prerequisites: An AL-Go repository setup using one of the scenarios*
 
 When running the CI/CD workflow, the build job is by far the most time consuming job. By adding your own GitHub Runner, which can cache the generic image, the build image and also the artifacts, the time for running the build job can become much faster.
@@ -22,7 +22,7 @@ GitHub runners can be registered for an organization (accessible for all reposit
 1. Save and inspect your workflows performance increase on the second run.
 1. Inspect that one of the runners pick up the workflow
 ![Active](/images/13d.png)
-1. Clicking the runner reveals the job it is running
+1. Clicking the runner reveals that the job it is running
 ![Job](/images/13e.png)
 
 ## Additional info on build performance
