--- a/Scenarios/13.md
+++ b/Scenarios/13.md
@@ -1,7 +1,7 @@
-# #13 Setup your own GitHub runner to increase build performance
+# #13 Set up your own GitHub runner to increase build performance
 *Prerequisites: An AL-Go repository setup using one of the scenarios*
 
-When running the CI/CD workflow, the build job is by far the most time consuming job. By adding your own GitHub Runner, which can cache the generic image, the build image and also the artifacts, the time for running the build job can become much faster.
+When running the CI/CD workflow, the build job is by far the most time-consuming job. By adding your own GitHub Runner, which can cache the generic image, the build image and also the artifacts, the time for running the build job can become much faster.
 
 GitHub runners can be registered for an organization (accessible for all repositories in the organization) or for a single repository.
 
@@ -9,25 +9,25 @@ GitHub runners can be registered for an organization (accessible for all reposit
 ![Organization new runner](/images/13a.png)
 1. To create a self-hosted runner manually, choose Windows under Runner Image and x64 in architecture and follow the description on how to create a self-hosted runner manually, then go to step 9 to continue the configuration.
 1. To create an Azure VM hosting x self-hosted runners, open a new tab and navigate to https://aka.ms/getbuildagent.
-1. Enter the **Resource Group name**, **Region**, **VM Name**, **Admin Password** of your choise.
+1. Enter the **Resource Group name**, **Region**, **VM Name**, **Admin Password** of your choice.
 1. Enter the **number of agents** you want to create on the VM.
-1. Grab the **token**, the **organization Url** and the **Agent Url** from the Create Self-Hosted runner page, and specify **self-hosted** in labels.
+1. Grab the **token**, the **organization Url**, and the **Agent Url** from the Create Self-Hosted runner page, and specify **self-hosted** in labels.
 ![getbuildagent](/images/13b.png)
-1. Select **Review and Create** and then review the deployment and click **Create**.
+1. Select **Review and Create** and then review the deployment and choose **Create**.
 1. Wait for the Azure VM creation to finalize, navigate back to see that the Runners have been registered and are ready to use.
 ![Runners](/images/13c.png)
-1. On the list of Runners on GitHub, click the runner group **Default** and allow public repositories if your repository is public
+1. On the list of Runners on GitHub, choose the runner group **Default** and allow public repositories if your repository is public.
 ![public](/images/13f.png)
 1. Now navigate to your project settings file (.AL-Go/settings.json) and set **gitHubRunner** to **self-hosted**.
 1. Save and inspect your workflows performance increase on the second run.
-1. Inspect that one of the runners pick up the workflow
+1. Inspect that one of the runners pick up the workflow.
 ![Active](/images/13d.png)
-1. Clicking the runner reveals that the job it is running
+1. Clicking the runner reveals that the job it is running.
 ![Job](/images/13e.png)
 
 ## Additional info on build performance
 
-1. Running 6 CI/CD workflows simultanously, causes 1 workflow to wait as I only had 5 runners
+1. Running 6 CI/CD workflows simultanously, causes 1 workflow to wait as I only had 5 runners.
 ![Wait](/images/13g.png)
 1. Connecting to the runner VM and looking at utilization indicates that the VM is pretty busy and probably over-allocated when starting 5+ builds at the same time. Every build was ~50% slower than when running only 1 build.
 ![CPU](/images/13h.png)
